# YDCore

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: windows-build-v3.yml  windows-build-v5.yml  windows-build.yml
Presets/: factory_bundle.json
Source/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Effects/: ChorusFx.h  DelayFx.h  Distortion.h  EffectsChain.cpp  EffectsChain.h  EqFx.h  ReverbFx.h  ReverbHQ.h
Source/Engine/: Arpeggiator.cpp  Arpeggiator.h  DspUtils.h  Envelope.h  Filter.h  FilterHQ.h  LFO.h  ModMatrix.h  Oscillator.h  OscillatorHQ.h  SynthEngine.cpp  SynthEngine.h  Voice.cpp  Voice.h  Wavetable.h  WavetableFactory.cpp  WavetableImport.cpp  WavetableImport.h
Source/Presets/: PresetManager.cpp  PresetManager.h
Source/UI/: Controls.h  EnvelopeDisplay.h  LookAndFeelYD.cpp  LookAndFeelYD.h  ModEditor.h  Pages.h  PresetBrowser.h  SectionsFx.h  SectionsMod.h  SectionsOsc.h  TopBar.h  WaveformDisplay.h  WavetableBrowser.h  WavetableDisplay.h
Tests/: HeadlessTests.cpp
ci/: windows-build-v2.yml  windows-build-v4.yml  windows-build-v5.yml
docs/: QUALITY_MODES.md  SIGNING.md  WAVETABLES.md
installer/: GLOBUS-Installer.iss
tools/: gen_installer_assets.py  gen_presets.py
